--- a/QingLong/Dockerfile
+++ b/QingLong/Dockerfile
@@ -29,16 +29,11 @@ RUN npm i -g pnpm@8.3.1 && \
 
 FROM python:3.11-slim-bullseye
 
-ENV DEFAULT_ADMIN_USERNAME="15614620010" \
-    DEFAULT_ADMIN_PASSWORD="Z4h0p88." \
-    DEFAULT_RCLONE_CONF="[huggingface]\ntype = webdav\nurl = https://kamo.teracloud.jp/dav/\nvendor = other\nuser = zhanghaipengbeifen1\npass = PdK8wF6V9HDHHiM7482nbfCqlUSvBwjL_k-0nd8-zBk" \
-    DEFAULT_NOTIFY_CONFIG='{"type": "weWorkBot", "weWorkBotKey": "323eef9d-844a-404f-a0f3-4cff479666f1"}'
-    
 ARG QL_MAINTAINER="whyour"
 LABEL maintainer="${QL_MAINTAINER}"
 ARG QL_URL=https://github.com/${QL_MAINTAINER}/qinglong.git
 ARG QL_BRANCH=v2.18.3
-	
+
 ENV PNPM_HOME=/root/.local/share/pnpm \
   PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/root/.local/share/pnpm:/root/.local/share/pnpm/global/5/node_modules:$PNPM_HOME \
   NODE_PATH=/usr/local/bin:/usr/local/pnpm-global/5/node_modules:/usr/local/lib/node_modules:/root/.local/share/pnpm/global/5/node_modules \
@@ -138,10 +133,10 @@ RUN mkdir /ql/data && \
   chmod -R 777 /root 
 
 COPY --from=builder /tmp/build/node_modules/. /ql/node_modules/
-COPY docker-entrypoint.sh /ql/docker/
-RUN chmod +x /ql/docker/docker-entrypoint.sh
 COPY services.json /ql/node_modules/nodemailer/lib/well-known/
 COPY notify.py /notify.py
+
+
 
 # Create a user to run code-server
 RUN useradd -m -s /bin/zsh coder && \
@@ -173,7 +168,7 @@ ENV HOME=/home/coder \
 WORKDIR ${QL_DIR}
 
 # 创建rclone配置文件
-RUN rclone config -h
+# RUN rclone config -h
 
 HEALTHCHECK --interval=5s --timeout=2s --retries=20 \
   CMD curl -sf --noproxy '*' http://127.0.0.1:5400/api/health || exit 1
